# llm-terminal

./: .cursorrules  .gitignore  README.md  mcp_config.json  mcp_config_example.json  pyproject.toml  run.py  settings.json
gemini_terminal/: __init__.py  config.py  data_models.py  gemini_client.py  gemini_terminal.tcss  main.py
gemini_terminal/server/: mcp_client.py
gemini_terminal/ui/: components.py  screens.py
llm_terminal/: agent_service.py  app.py  config.py
src/: app.py  config.py  config_dialog.py  main.py  model_dialog.py
src/ui/: __init__.py  config_dialog.py  model_dialog.py  server_toggles.py  status.py  styles.css  tool_settings.py
