[project]
name = "Terminal-App"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llm>=0.23",
    "mcp[cli]>=1.3.0",
    "ruff>=0.9.9",
    "textual>=2.1.2",
]

[project.scripts]
terminal-app = "src.main:TerminalApp.run"
